// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartTeaser component should render the CartTeaser component with count and amount 1`] = `
<ul
  className="right"
>
  <li>
    <a
      className="waves-effect white-text btn-flat"
      href="/cart"
      onClick={[Function]}
    >
      5
       
      items
       that costs 
      <span
        className="currency currency--normal"
      >
        60
         
        EUR
      </span>
    </a>
  </li>
</ul>
`;

exports[`CartTeaser component should render the CartTeaser component with no items in cart text 1`] = `
<ul
  className="right"
>
  <li>
    <a
      className="waves-effect white-text btn-flat"
      href="/cart"
      onClick={[Function]}
    >
      No items in cart
    </a>
  </li>
</ul>
`;
